--- a/RedCatalog/main/templates/main/index.html
+++ b/RedCatalog/main/templates/main/index.html
@@ -15,13 +15,17 @@ Red Catalog - Главная
 
             <input placeholder="Электронная почта" type="email" name="mail" id="input-mail">
             <input placeholder="Пароль" type="password" name="password" id="input-password">
-            <button type="submit" onclick="login1()" id="login-button">Войти</button>
+            <div style="display: flex;">
+                <button type="submit" onclick="login1()" id="login-button">Войти</button>
+                <p id="login-button-error"></p>
+            </div>
+
 
 
         <a href="{% url 'registration' %}">У меня нет аккаунта</a>
     </div>
 {% endif %}
-
+<a href="{% url 'logout' %}">Выйти</a>
 
 
 {% endblock %}
