--- a/RedCatalog/main/templates/main/registration.html
+++ b/RedCatalog/main/templates/main/registration.html
@@ -8,8 +8,50 @@ Red Catalog - Войти
 {% block content %}
 {% csrf_token %}
 
-<div class="">
+<h1 class="registration-header">Создание личного кабинета</h1>
+<form method="post" action="sign_up" lang="ru">
+    {% csrf_token %}
+    <div class="regis-mail">
+        <h3>Электронная почта:</h3>
+        <input placeholder="example@exm.ru" type="email" name="mail">
+    </div>
+    <div class="regis-password">
+        <h3>Пароль:</h3>
+        <input placeholder="Пароль" type="password" name="password">
+        <input placeholder="Подтверждение пароля" type="password" name="password-confirm">
+    </div>
+    <div class="regis-name">
+        <input placeholder="Имя" class="regis-name" name="firstname">
+        <input placeholder="Фамилия" class="regis-name" name="lastname">
+    </div>
 
-</div>
+    <input placeholder="Дата рождения" type="date" class="regis-date" name="birthdate">
+    <div class="regis-photo">
+        <h3>Фото:</h3>
+        <input placeholder="Фото" type="file" lang="ru" title="Выберите файл" id="photo-input" name="photo">
+    </div>
+    <img src="" id="regis-photo-preview">
+    <button class="regis-button" type="submit">Зарегистрироваться</button>
+</form>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const fileInput = document.getElementById('photo-input');
+        const filePreview = document.getElementById('regis-photo-preview');
+
+        fileInput.addEventListener('change', function() {
+            const file = fileInput.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    filePreview.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            } else {
+                filePreview.src = '';
+            }
+        });
+    });
+</script>
 
 {% endblock %}
